force-app/main/default/objects/DC_Port__c/DC_Port__c.object-meta.xml
<CustomObject>
    <label>Port</label>
    <nameField>
        <label>Port Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>