force-app/main/default/objects/DC_Port__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Panel this Port is on.</description>
    <label>Panel</label>
    <referenceTo>DC_Panel__c</referenceTo>
    <relationshipLabel>Ports</relationshipLabel>
    <relationshipName>Ports</relationshipName>
    <type>Lookup</type>
</CustomField>