force-app/main/default/objects/DC_Port__c/fields/Port_Status__c.field-meta.xml
<CustomField>
    <fullName>Port_Status__c</fullName>
    <description>Determines the status of this port with respect to fiber availability of Homeruns and the Usage of Cross Connects.</description>
    <label>Port Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Cross Connect</fullName>
            </value>
            <value>
                <fullName>Ready for Cross Connect</fullName>
            </value>
            <value>
                <fullName>Installed Homerun not Contracted</fullName>
            </value>
            <value>
                <fullName>No Homerun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>