force-app/main/default/objects/DC_Port__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>Ten character short name of the Port used to support naming convention. Dependent on Mod during automatic creation.</description>
    <label>Short Name</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>